<resources>
    <string name="app_name">Мої квартири</string>
    <string name="title_activity__find_client">Activity_FindClient</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="theme">


        <item>Звичайна тема</item>
        <item>Нічна тема</item>

    </string-array>



    <string name="action_settings">Settings</string>

    <string name="citieshint">Оберіть місто</string>
    <string name="districtshint">Оберіть район</string>

    <string name="note_text">Введите текст заметки</string>
    <string name="note_details_title">Заметка</string>
    <string name="save">Сохранить</string>
    <string name="completed">Выполнение</string>
    <string name="title_activity__notatki">Activity_Notatki</string>
    <string name="my_notes">Нотатки</string>
    <string name="search_notes">Пошук</string>
    <string name="note_title">Заголовок</string>
    <string name="note_subtitle">Підзаголовок</string>
    <string name="type_note_here">Введіть текст тут</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>